--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </figure>
                     <div class="text ad__text">
                         <p class="paragraph paragraph--animated">
-                           Whatever you do, make sure the sky is enough for your bucket to fetch the air that carries the student from their place of worship singing hallelujah
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus ut debitis temporibus molestiae et sed aspernatur quisquam eligendi dolorum doloremque!
                         </p>
                     </div>
                 </div>
@@ -113,8 +113,7 @@
                     </figure>
                     <div class="text ad__text">
                         <p class="paragraph paragraph--animated">
-                           Sistein chapel is not sixteen years old if you may care to know amaka is an adult that still attends the naming ceremony of baby Jesus who is the most recognised.
-                        </p>
+                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta alias officiis esse nemo sit nam maiores ratione voluptatum animi excepturi.
                     </div>
                 </div>
             </div>
